finalized Calculate button states but need to squash a few bugs

--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,6 @@ input {
   font-family: Helvetica;
   font-size: 32px;
   font-style: normal;
-  font-weight: 300;
   line-height: normal;
   border: 0px;
 }
